[gd_scene load_steps=29 format=3 uid="uid://cw2bkovas8y1f"]

[ext_resource type="Theme" uid="uid://do36jrxowl4gq" path="res://themes/papertheme.tres" id="1_5sxta"]
[ext_resource type="Script" path="res://scenes/card/card.gd" id="2_bi6mc"]
[ext_resource type="Texture2D" uid="uid://rd1hfix6wupq" path="res://gfx/pixport/49er.png" id="3_fh1e6"]
[ext_resource type="Texture2D" uid="uid://cf2sriou2jnq5" path="res://gfx/cardextras/pixel_special_stat_icons.png" id="3_upmis"]
[ext_resource type="Script" path="res://classes/CardData.gd" id="4_6ucoe"]
[ext_resource type="Texture2D" uid="uid://drbpoarayruwf" path="res://gfx/cardextras/banoverlay.png" id="5_48lg5"]
[ext_resource type="Script" path="res://classes/Sigils/Sprinter.gd" id="5_bdtmi"]
[ext_resource type="Texture2D" uid="uid://d2ojmwh2hoygq" path="res://gfx/sigils/Waterborne.png" id="6_26dv8"]
[ext_resource type="PackedScene" uid="uid://bt4cq1s4huvku" path="res://scenes/card/sigil.tscn" id="6_fuchl"]
[ext_resource type="Texture2D" uid="uid://7er8ncm063ey" path="res://gfx/cardextras/costs/mox/mox-g.png" id="6_j4nj5"]
[ext_resource type="Texture2D" uid="uid://cf4qv6l5lg56w" path="res://gfx/cardextras/conduit_band.png" id="6_m4teg"]
[ext_resource type="Texture2D" uid="uid://ta5ucx17bca8" path="res://gfx/cardextras/costs/blood/sap1.png" id="7_mifls"]
[ext_resource type="Texture2D" uid="uid://bwtmaflwr0imc" path="res://gfx/cardextras/costs/blood/blood1.png" id="8_hyk3r"]
[ext_resource type="Texture2D" uid="uid://d1mhp0bpcp1ro" path="res://gfx/sigils/Battery Bearer.png" id="11_ox2m0"]
[ext_resource type="Material" uid="uid://mhyteynmwog3" path="res://scenes/card/burnup_mat.tres" id="15_7wbqx"]

[sub_resource type="Resource" id="Resource_bqywo"]
script = ExtResource("5_bdtmi")
movement_quirk = 0
rune_value = 1
use_restrictions = 0

[sub_resource type="Resource" id="Resource_mwo0l"]
resource_name = "49er"
script = ExtResource("4_6ucoe")
portait = ExtResource("3_fh1e6")
tribes = Array[int]([9])
sigils = Array[Resource("res://classes/Sigils/Sigil.gd")]([SubResource("Resource_bqywo")])
attack = 1
attack_special = 0
health = 2
health_special = 0
conductive = false
sacrificable = true
blood_cost = 0
sap_cost = 0
mox_green_cost = 0
mox_orange_cost = 0
mox_blue_cost = 0
mox_prisim_cost = 0
bone_cost = 0
energy_cost = 2
energy_max_cost = 0
rune_cost = 0
heat_cost = 0
sidedecker = false
rare = false
description = ""

[sub_resource type="LabelSettings" id="LabelSettings_grnag"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_464i6"]
resource_name = "LightDefaultPanel"
bg_color = Color(0.701961, 0.67451, 0.498039, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_xhlj8"]
line_spacing = 0.0
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4d7x"]
atlas = ExtResource("3_upmis")
region = Rect2(0, 9, 16, 8)

[sub_resource type="Animation" id="Animation_p8ugc"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("vertical:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v70ab"]
resource_name = "burn"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:material:shader_parameter/clip")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.5, 1),
"update": 0,
"values": [0.0, 4.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("15_7wbqx"), ExtResource("15_7wbqx")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:material:shader_parameter/gradient:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [PackedColorArray(1, 1, 1, 1, 0.0491087, 0.0491087, 0.0491087, 1, 0.0745098, 0.0745098, 0.0745098, 1, 0.858824, 0.176471, 0.176471, 1, 0.0745098, 0.0745098, 0.0745098, 1, 0.294118, 0.294118, 0.294118, 0, 1, 1, 1, 0), PackedColorArray(1, 1, 1, 1, 0.0491087, 0.0491087, 0.0491087, 1, 0.0745098, 0.0745098, 0.0745098, 1, 0.298039, 0.992157, 0.341176, 1, 0.0745098, 0.0745098, 0.0745098, 1, 0.294118, 0.294118, 0.294118, 0, 1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_f6vw7"]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7t8i5"]
resource_name = "dive"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(0.5, 1.5, 1.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, 3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1.5, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"toggle_icon_overlay"
}]
}

[sub_resource type="Animation" id="Animation_k8iav"]
resource_name = "flipfrom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1.5, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vertical:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_cmt6f"]
resource_name = "no"
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0436332, -0.0436332, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk0n8"]
_data = {
"RESET": SubResource("Animation_p8ugc"),
"burn": SubResource("Animation_v70ab"),
"die": SubResource("Animation_f6vw7"),
"dive": SubResource("Animation_7t8i5"),
"flipfrom": SubResource("Animation_k8iav"),
"no": SubResource("Animation_cmt6f")
}

[node name="Card" type="Button"]
z_as_relative = false
texture_filter = 1
custom_minimum_size = Vector2(76, 120)
layout_direction = 2
offset_right = 76.0
offset_bottom = 120.0
pivot_offset = Vector2(38, 60)
theme = ExtResource("1_5sxta")
script = ExtResource("2_bi6mc")
data = SubResource("Resource_mwo0l")

[node name="vertical" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="vertical"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 2
text = "Eel"
label_settings = SubResource("LabelSettings_grnag")
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="CardTop" type="VBoxContainer" parent="vertical"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Outline" type="Panel" parent="vertical/CardTop"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_464i6")

[node name="Portrait" type="TextureRect" parent="vertical/CardTop/Outline"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_fh1e6")
stretch_mode = 6

[node name="Costs" type="VBoxContainer" parent="vertical/CardTop/Outline"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2

[node name="Mox" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_j4nj5")
expand_mode = 5

[node name="Sap" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "You must Sacrifice [x] creatures you own to pay this cost.
Sacrificing a card will kill it. All cards can be Sacrificed for Sap."
texture = ExtResource("7_mifls")
expand_mode = 5

[node name="Blood" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "You must Sacrifice [x] creatures you own to pay this cost.
Sacrificing a card will kill it. Some cards cannot be Sacrificed for Blood."
texture = ExtResource("8_hyk3r")
expand_mode = 5

[node name="Energy" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "you must remove [x] Energy to pay this cost.
You get +1 maximum Energy (cells) per turn to a maximum of 6.
All energy regenarates at the start of a turn and unspent Energy is wasted."
texture = ExtResource("8_hyk3r")
expand_mode = 5

[node name="Cells" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "You must remove [x] maximum Energy (Cells) to pay this cost. Cells that are empty are prioritized."
texture = ExtResource("8_hyk3r")
expand_mode = 5

[node name="Bones" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_hyk3r")
expand_mode = 5

[node name="Heat" type="TextureRect" parent="vertical/CardTop/Outline/Costs"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_hyk3r")
expand_mode = 5

[node name="CardBottom" type="Control" parent="vertical"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="SigilClip" type="Control" parent="vertical/CardBottom"]
clip_contents = true
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="vertical/CardBottom/SigilClip"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.5
offset_bottom = 12.5

[node name="VBoxContainer" type="VBoxContainer" parent="vertical/CardBottom/SigilClip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TribeText" type="Label" parent="vertical/CardBottom/SigilClip/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
mouse_filter = 1
text = "- Fish -"
label_settings = SubResource("LabelSettings_xhlj8")
horizontal_alignment = 1
clip_text = true

[node name="ConduitBand" type="TextureRect" parent="vertical/CardBottom/SigilClip/VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
texture = ExtResource("6_m4teg")

[node name="Sigils" type="GridContainer" parent="vertical/CardBottom/SigilClip/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
columns = 2

[node name="sigil" parent="vertical/CardBottom/SigilClip/VBoxContainer/Sigils" instance=ExtResource("6_fuchl")]
layout_mode = 2
texture = ExtResource("11_ox2m0")

[node name="sigil2" parent="vertical/CardBottom/SigilClip/VBoxContainer/Sigils" instance=ExtResource("6_fuchl")]
layout_mode = 2
texture = ExtResource("6_26dv8")

[node name="StatsClip" type="Control" parent="vertical/CardBottom"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Patches" type="HBoxContainer" parent="vertical/CardBottom/StatsClip"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
anchor_top = 0.851
anchor_right = 1.0
anchor_bottom = 0.97
offset_left = 30.0
offset_top = -6.017
offset_right = -30.0
offset_bottom = 0.00999451

[node name="HpIcon" type="TextureRect" parent="vertical/CardBottom/StatsClip"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -16.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("AtlasTexture_c4d7x")
expand_mode = 2

[node name="HpLabel" type="Label" parent="vertical/CardBottom/StatsClip"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_vertical = 0
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="AtkIcon" type="TextureRect" parent="vertical/CardBottom/StatsClip"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 32.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("AtlasTexture_c4d7x")
expand_mode = 2

[node name="AtkLabel" type="Label" parent="vertical/CardBottom/StatsClip"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -16.0
grow_vertical = 0
text = "1"
vertical_alignment = 2

[node name="IconOverlay" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.862745)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Icon" type="TextureRect" parent="IconOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_26dv8")
stretch_mode = 5

[node name="TextureOverlay" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_default_cursor_shape = 8
texture = ExtResource("5_48lg5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_vk0n8")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
